--- a/encrypted-media-respec.html
+++ b/encrypted-media-respec.html
@@ -29,7 +29,6 @@
       };
     </script>
     <script class="remove">
-
       var respecConfig = {
       // specification status (e.g. WD, LCWD, NOTE, etc.). If in doubt use ED.
       specStatus: "ED",
@@ -185,6 +184,7 @@
 
         <dt id="key-system">Key System</dt>
         <dd>
+<p>THIS IS A TEST DIFF</p>
           <p>A Key System is a generic term for a decryption mechanism and/or content protection provider.
           Key System strings provide unique identification of a Key System.
           They are used by the user agent to select a <a def-id="cdm"></a> and identify the source of a key-related event.
