--- a/encrypted-media-respec.html
+++ b/encrypted-media-respec.html
@@ -4035,12 +4035,13 @@
     </section>
 
     <script class="remove">
-      // Rewrite the URLs for the remaining resources.
+      /* Rewrite the URLs for the remaining resources. */
+      /* The diff service separates each word into a separate line, so use multiline comments. */
       if (isDiffService) {
         Array.from(document.getElementsByTagName("img")).forEach(function (element, index, array) {
           var urlComponents = element.src.split('/');
           if (urlComponents[2] != diffServiceHostName)
-            return; // The URL is for another server, so we do not need to fix it.
+            return; /* The URL is for another server, so we do not need to fix it. */
           var file = urlComponents[urlComponents.length - 1];
           element.src = replacementOriginAndPath + file;
           console.log("Rewrote URL as " + element.src); 
@@ -4049,7 +4050,7 @@
         Array.from(document.getElementsByTagName("link")).forEach(function (element, index, array) {
           var urlComponents = element.href.split('/');
           if (urlComponents[2] != diffServiceHostName)
-            return; // The URL is for another server, so we do not need to fix it.
+            return; /* The URL is for another server, so we do not need to fix it. */
           var file = urlComponents[urlComponents.length - 1];
           element.href = replacementOriginAndPath + file;
           console.log("Rewrote URL as " + element.href); 
