log loading of JS

--- a/encrypted-media-respec.html
+++ b/encrypted-media-respec.html
@@ -10,7 +10,7 @@
       // To enable diffs that look better, use the files from the latest version of the spec trunk.
       var diffServiceHostName = "services.w3.org";
       var diffServicePathName = "/htmldiff";
-      var replacementOriginAndPath = "https://w3c.github.io/encrypted-media/"
+      var replacementOriginAndPath = "https://cdn.rawgit.com/ddorwin/encrypted-media/w3c-diff-fix/"
       var isDiffService = window.location.hostname == diffServiceHostName && window.location.pathname == diffServicePathName; 
 
       // The JS replacement file must be loaded here.
