--- a/encrypted-media-respec.html
+++ b/encrypted-media-respec.html
@@ -8,10 +8,11 @@
     <script class="remove">
       // The W3C diff service does not fix up relative URLs.
       // To enable diffs that look better, use the files from the latest version of the spec trunk.
+      // Changes to the affected JS, CSS, and image files will NOT be reflected!
       var diffServiceHostName = "services.w3.org";
       var diffServicePathName = "/htmldiff";
-      var replacementOriginAndPath = "https://cdn.rawgit.com/ddorwin/encrypted-media/w3c-diff-fix/"
-      var isDiffService = window.location.hostname == diffServiceHostName && window.location.pathname == diffServicePathName; 
+      var replacementOriginAndPath = "https://w3c.github.io/encrypted-media/"
+      var isDiffService = window.location.hostname == diffServiceHostName && window.location.pathname == diffServicePathName;
 
       // The JS replacement file must be loaded here.
       // Other resources will be replaced at the end of the file.
@@ -25,7 +26,7 @@
         replacement.className = "remove";
         replacement.text = xhr.responseText;
         $("head").append(replacement);
-        console.log("Rewrote URL as " + source); 
+        console.log("Rewrote URL as " + source);
       };
     </script>
     <script class="remove">
@@ -184,7 +185,6 @@
 
         <dt id="key-system">Key System</dt>
         <dd>
-<p>THIS IS A TEST DIFF</p>
           <p>A Key System is a generic term for a decryption mechanism and/or content protection provider.
           Key System strings provide unique identification of a Key System.
           They are used by the user agent to select a <a def-id="cdm"></a> and identify the source of a key-related event.
@@ -4037,6 +4037,7 @@
     <script class="remove">
       /* Rewrite the URLs for the remaining resources. */
       /* The diff service separates each word into a separate line, so use multiline comments strings without spaces. */
+      /* The diff service cannot handle script in <body>, so it is not possible to use the service across changes in this section. */
       if (isDiffService) {
         Array.from(document.getElementsByTagName("img")).forEach(function (element, index, array) {
           var urlComponents = element.src.split('/');
@@ -4044,19 +4045,18 @@
             return; /* The URL is for another server, so we do not need to fix it. */
           var file = urlComponents[urlComponents.length - 1];
           element.src = replacementOriginAndPath + file;
-          console.log("Rewrote-URL-as-" + element.src); 
+          console.log("Rewrote-URL-as-" + element.src);
         });
-    
+
         Array.from(document.getElementsByTagName("link")).forEach(function (element, index, array) {
           var urlComponents = element.href.split('/');
           if (urlComponents[2] != diffServiceHostName)
             return; /* The URL is for another server, so we do not need to fix it. */
           var file = urlComponents[urlComponents.length - 1];
           element.href = replacementOriginAndPath + file;
-          console.log("Rewrote-URL-as-" + element.href); 
+          console.log("Rewrote-URL-as-" + element.href);
         });
       }
     </script>
-    
   </body>
 </html>
