--- a/encrypted-media-respec.html
+++ b/encrypted-media-respec.html
@@ -165,6 +165,7 @@
     <section id="definitions">
       <h2>Definitions</h2>
 
+TEST TEXT
       <dl>
         <dt id="cdm">Content Decryption Module (CDM)</dt>
         <dd>
