Check the session type before the contents of sanitized response

--- a/encrypted-media-respec.html
+++ b/encrypted-media-respec.html
@@ -1981,7 +1981,7 @@
                             This enables a reasonable number of key rotation algorithms to be implemented across user agents and may reduce the likelihood of playback interruptions in use cases that involve various streams in the same element (i.e. adaptive streams, various audio and video tracks) using different keys.
                           </p>
                         </dd>
-                        <dt>If <var>sanitized response</var> contains a <a def-id="record-of-license-destruction"></a> acknowledgement and <var>sessionType</var> is <a def-id="persistent-license-session"></a></dt>
+                        <dt>If <var>sessionType</var> is <a def-id="persistent-license-session"></a> and <var>sanitized response</var> contains a <a def-id="record-of-license-destruction"></a> acknowledgement</dt>
                         <dd>
                           <p>Run the following steps:</p>
                           <ol>
@@ -1995,7 +1995,7 @@
                             <li><p>Set <var>session closed</var> to true.</p></li>
                           </ol>
                         </dd>
-                        <dt>If <var>sanitized response</var> contains a <a def-id="record-of-key-usage"></a> acknowledgement and <var>sessionType</var> is <a def-id="persistent-usage-record-session"></a></dt>
+                        <dt>If <var>sessionType</var> is <a def-id="persistent-usage-record-session"></a> and <var>sanitized response</var> contains a <a def-id="record-of-key-usage"></a> acknowledgement</dt>
                         <dd>
                           <p>Run the following steps:</p>
                           <ol>
